==> LucastuFett/edu-unt-demo/modules/ssd1306/src/ssd1306.c <==
#include "ssd1306.h"
#define SSD1306_I2C_PORT              I2C0
#define SSD1306_WRITECOMMAND(command) ssd1306_I2C_Write(SSD1306_I2C_ADDR, 0x00, (command))
#define SSD1306_WRITEDATA(data)       ssd1306_I2C_Write(SSD1306_I2C_ADDR, 0x40, (data))
#define ABS(x)                        ((x) > 0 ? (x) : -(x))

void ssd1306_I2C_Init() {
    rcu_periph_clock_enable(RCU_GPIOB);
    rcu_periph_clock_enable(RCU_I2C0);
    rcu_periph_clock_enable(RCU_AF);

    gpio_pin_remap_config(GPIO_I2C0_REMAP, ENABLE);
    gpio_init(GPIOB, GPIO_MODE_AF_OD, GPIO_OSPEED_50MHZ, GPIO_PIN_8 | GPIO_PIN_9);

    i2c_deinit(I2C0);
    i2c_clock_config(I2C0, 10000, I2C_DTCY_2);
    i2c_enable(I2C0);
    /* enable acknowledge */
    i2c_ack_config(I2C0, I2C_ACK_ENABLE);
}

void ssd1306_I2C_WriteMulti(uint8_t address, uint8_t reg, uint8_t * data, uint16_t size) {
    /* send a start condition to I2C bus */
    i2c_start_on_bus(I2C0);
    /* wait until SBSEND bit is set */
    while (!i2c_flag_get(I2C0, I2C_FLAG_SBSEND));

    /* send slave address to I2C bus */
    i2c_master_addressing(I2C0, address << 1, I2C_TRANSMITTER);

    i2c_ack_config(I2C0, I2C_ACK_ENABLE);

    /* wait until ADDSEND bit is set */
    while (!i2c_flag_get(I2C0, I2C_FLAG_ADDSEND));
    /* clear ADDSEND bit */
    i2c_flag_clear(I2C0, I2C_FLAG_ADDSEND);

    while (!i2c_flag_get(I2C0, I2C_FLAG_TBE));
    i2c_data_transmit(I2C0, reg);

    for (int count = 0; count < size; count++) {
        /* wait until the transmit data buffer is empty */
        while (!i2c_flag_get(I2C0, I2C_FLAG_TBE));
        /* data transmission with the number of first register to read */
        i2c_data_transmit(I2C0, data[count]);

        if (size - 1 == count) {
            /* wait until the second last data byte is received into the shift register */
            while (!i2c_flag_get(I2C0, I2C_FLAG_BTC));
            /* disable acknowledge */
            i2c_ack_config(I2C0, I2C_ACK_DISABLE);
        }
    }
}
